created image seach index

--- a/mongo_function.ipynb
+++ b/mongo_function.ipynb
@@ -10,18 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from pymongo import MongoClient"
+    "from pymongo import MongoClient\n",
+    "from bson.objectid import ObjectId"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,30 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'url_list': ['0-3384976558-pikachu eating spagetti.webp',\n",
-       "  '06900-3224067249-spongebob squarepants, 3d, r_OldSchoolCool,  on mars.webp',\n",
-       "  '02711-428682022-space nebula in background, flying turtle with futuristic city glass buble, photo realistic.webp',\n",
-       "  '06861-833433198-Cute birdo style minion, holidays in Paris, unreal engine, octane render, 4k.webp',\n",
-       "  '04865-1634464590-boy kissing girl under the moon, painting, (high detail), sharp.webp',\n",
-       "  '07001-1504980454-Cute darth vader style minion, holidays in Paris, unreal engine, octane render, 4k.webp',\n",
-       "  '10217-3908704418-street cyberpunk universe.webp',\n",
-       "  '10254-2477207318-street  with flying cars cyberpunk universe top view.webp',\n",
-       "  '10370-1920055693-street  with flying cars cyberpunk universe perspective view.webp',\n",
-       "  '10582-2468875061-duck wizard watter, 3D render of an electric Porsche concept sport car, digital design sketch, trending on ArtStation, cardesign.webp'],\n",
-       " 'next_cursor': 10}"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "GetHomeImages(collection,0,10)"
    ]
@@ -98,11 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def SearchPrompt(collection=None,cursor=0,size=50,prompt=\"\"):\n",
+    "    if len(prompt.split(\" \")) > 3:\n",
+    "        return {\"response\" : \"Too Many keywords\"}\n",
+    "    if prompt == \"\":\n",
+    "        return {\"response\" : \"No Keywords provided\"}\n",
     "    query = [\n",
     "        {\n",
     "            '$search': {\n",
@@ -130,47 +114,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = SearchPrompt(collection,0,10,\"pikacu\")"
+    "documents = SearchPrompt(collection,0,50,\"car\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for doc in documents:\n",
+    "    print(doc['prompt'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Search Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def SearchImage(collection=None,vector=[]):\n",
+    "    query = [\n",
+    "                {\n",
+    "                        \"$search\": {\n",
+    "                            \"index\": \"search_image\",\n",
+    "                            \"knnBeta\": {\n",
+    "                            \"vector\": vector,\n",
+    "                            \"path\": \"content_embedding\",\n",
+    "                            \"k\": 5\n",
+    "                            }\n",
+    "                        }\n",
+    "                },\n",
+    "                    {\n",
+    "                    \"$skip\": 100\n",
+    "                    },\n",
+    "                    {\n",
+    "                    \"$limit\": 50\n",
+    "                    }\n",
+    "            ]\n",
+    "    result = collection.aggregate(query)\n",
+    "\n",
+    "    return [doc for doc in result]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = collection.find({\"_id\":ObjectId(\"641d5a8b10d0c2407e98b8f6\")},{\"content_embedding\"})[0]['content_embedding']\n",
+    "documents = SearchImage(collection,vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('641d5a2f1132d7dd7251e7df'),\n",
-       " 'model_type': 'stable_diffusion',\n",
-       " 'width': 512,\n",
-       " 'height': 512,\n",
-       " 'source': 'https://stablediffusion.fr/',\n",
-       " 'source_url_list': ['https://stablediffusion.fr/assets/week-2022-40/0-3384976558-pikachu eating spagetti.webp'],\n",
-       " 'metadata': {},\n",
-       " 'image_url_list': ['https://stockai-bucket.apyhi.com/images/0-3384976558-pikachu eating spagetti.webp'],\n",
-       " 'approved': 1,\n",
-       " 'created_at': datetime.datetime(2023, 3, 24, 13, 37, 11, 580000),\n",
-       " 'prompt': 'pikachu eating spagetti',\n",
-       " 'dashboard_actions': [{'approved_by': 'nikhil2@appyhigh.com',\n",
-       "   'created_at': datetime.datetime(2023, 4, 11, 11, 46, 59, 865000)}],\n",
-       " 'thumbnails': {'small': 'https://stockai-bucket.apyhi.com/thumbnails/(30, 30)/30*300-3384976558-pikachu eating spagetti.webp',\n",
-       "  'medium': 'https://stockai-bucket.apyhi.com/thumbnails/(75, 75)/75*750-3384976558-pikachu eating spagetti.webp',\n",
-       "  'large': 'https://stockai-bucket.apyhi.com/thumbnails/(300, 300)/300*3000-3384976558-pikachu eating spagetti.webp'},\n",
-       " 'annoy_index': True}"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "641d5a8b10d0c2407e98b8f6\n",
+      "641d5f98dc7673f35a73d818\n",
+      "642d840481b26223d05d3986\n",
+      "642d816b81b26223d05d291c\n",
+      "642d82cf81b26223d05d31c9\n"
+     ]
     }
    ],
    "source": [
-    "doc[0]"
+    "for doc in documents:\n",
+    "    print(doc['_id'])"
    ]
   },
   {
